# linkdrop

./: .gitignore  README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.tsx  ipc.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: pmd3_helper.py
src-tauri/src/: adb.rs  airplay.rs  apps.rs  ddi.rs  device.rs  diagnostics.rs  error.rs  lib.rs  main.rs  muxd.rs  notifications.rs  photos.rs  platform.rs  pmd3.rs  screenshot.rs  wifi_sync.rs
