[package]
name = "linkdrop"
version = "0.1.0"
description = "Connect your iPhone to Ubuntu"
authors = ["Joe Munene"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "linkdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
idevice = { version = "0.1", features = ["usbmuxd"] }
plist = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
